objects/PS_Meeting__c.object
<CustomObject><fields>
        <fullName>Duration_Minutes__c</fullName>
        <inlineHelpText>This field will automatically populate with the duration when you save the record.</inlineHelpText>
        <label>Duration (Minutes)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Project_Success__c</fullName>
        <label>Project Success</label>
        <referenceTo>Project_Success__c</referenceTo>
        <relationshipName>PS_Attendance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Student__c</fullName>
        <formula>Project_Success__r.Student__r.Full_Name__c</formula>
        <label>Student</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Tutor__c</fullName>
        <formula>Project_Success__r.Tutor__r.Full_Name__c</formula>
        <label>Tutor</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Prep Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missed Meeting</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>PS Meeting</label><nameField>
        <displayFormat>PSM-{00000}</displayFormat>
        <label>PS Meeting Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>PS Meetings</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>